fixed issue with button margin on mobile

--- a/src/scss/components/_components.newsletter.scss
+++ b/src/scss/components/_components.newsletter.scss
@@ -62,5 +62,6 @@
 
   @include media-query($on-palm) {
       width: 100%;
+      margin-top: $spacing-unit / 2;
   }
 }
